--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,7 +8,7 @@
 
 <body>
   <h1> <%= text  %></h1>
-  <p> I am currently an Application Development student
+  <p> My name is Melissa Chen. I am currently an Application Development student
   in the Year Up program. Year Up is an intensive, competitive technical training and career development program with 250 corporate partners. I have taken numerous Business Applications and Software Development classes to pursue my passion in coding and career.</p>
 
   <p> I am also currently working as a Cybersecurity Software Engineer Intern at J.P. Morgan Chase & Co. At JPMC I mainly work with AWS, python, terraform, and cloud custodian. I am interested in back end programming and cloud development. My goal is to obtain a position in the cybersecurity field as a cloud security engineer or any position that allows me to work with developing software products that secure the cloud. I look forward to learning new skills, tools, and software.</p>
