--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <h1>Hello World!</h1>
   <h2><%= text %></h2>
   <img src="img/japanesestreet.jpg" alt="street" height="400px"> <br>
-<a href="/about">About Page</a>
-
+  <a href="/about">About Page</a>
+  <a href="/dogs">Dogs Page</a>
 </body>
 </html>
